fix overflow

--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,6 @@
 
 }
 
-
 body {
     display: flex;
     flex-direction: column;
@@ -24,9 +23,9 @@ body {
     height: 100vh;
     font-family: 'Roboto', sans-serif;
 }
+
 .header {
     background-color: var(--so-header-background-color);
-    width: 100vw;
     display:flex;
     flex-direction: column;
     align-items: center;
